MDEV-273: SHOW EXPLAIN: server crashes in JOIN::print_explain on a query with impossible WHERE - It turns out, there is a case where the join is degenerate, but   join->table_count!= && join->tables_list!=NULL. Need to also check   if join->zero_result_cause!=NULL, too.

- There is a slight problem: The code sets
    zero_result_cause= "no matching row in const table"
  when NOT running EXPLAIN. The result is that SHOW EXPLAIN will show this line while 
  regular EXPLAIN will not.