sql/sql_lex.cc
@@ -3752,7 +3752,11 @@ int st_select_lex::print_explain(select_result_sink *output,
   int res;
   if (join && join->optimized == JOIN::OPTIMIZATION_DONE)
   {
-    if (!join->table_count || !join->tables_list)
+    /*
+      There is a number of reasons join can be marked as degenerate, so all
+      three conditions below can happen simultaneously, or individually:
+    */
+    if (!join->table_count || !join->tables_list || join->zero_result_cause)
     {
       /* It's a degenerate join */
       const char *cause= join->zero_result_cause ? join-> zero_result_cause : 
